--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/linux,macos,python,windows,jupyternotebooks,visualstudiocode
+.vscode/settings.json
